--- a/index.html
+++ b/index.html
@@ -255,10 +255,13 @@
     <!-- -----------------ASIGNAR UNA SOLICITUD PENDIENTE A UN VIAJE DE BUQUE PARA MONTEVIDEO ------------>
     <div class="empresa" id="formAsignarBuque">
         <h4>Asignar Buque a Solicitud de Carga</h4>
+        <br>
         <select class="estiloCampos" id="selectSolicitudCarga">
             <option value="" selected>Elegir Solicitud</option>
         </select>
-        
+        <br>
+        <br>
+        <br>
         <select class="estiloCampos" id="selectViaje">
             <option value="" selected>Seleccionar Buque</option>
         </select>
@@ -290,7 +293,7 @@
 
     <!-- -----------RECHAZAR UNA SOLICITUD DE CARGA PENDIENTE PENDIENTE -------------------->
     <div class="empresa" id="formRechazarSolicitud">
-        <h4>Cancelar Solicitud Pendiente</h4>
+        <h4>Solicitudes de Carga Pendientes</h4>
         <table>
             <thead>
                 <tr>
