--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
     <script src="./js/screens/register.js"></script>
     <script src="./js/screens/loginEmpresa.js"></script>
     <script src="./js/globales.js"></script>
+    <script src="./js/screens/eleccionPerfil.js"></script>
     <script src="./js/index.js"></script>
 </head>
 <body>
-    <header id="containerHeader">
-        <input id="btnInicio" class="btnPrimerEstilo" type="submit" value="Inicio">
-    </header>
     <!-- Creamos el cartel de bienvenida, y eleccion de perfil -->
     <div id="btnsPrincipal" class="buttons">
         <h1 id="bienvenida">Bienvenido! <span class="span">Elija un perfil</span></h1>
@@ -95,6 +93,9 @@
         <br />
         <br />
         <input id = "btnIrEstadisticas" class="btnSeptimoEstilo" type="submit" value="Estadisticas">
+        <br />
+        <br />
+        <input id = "btnIrInicioImportador" class="btnQuintoEstilo" type="submit" value="Inicio">
     </div>
 
     
@@ -187,6 +188,7 @@
         <p>Empresa 1: 20%</p>
         <p>Empresa 2: 50%</p>
         <p>Empresa 3: 30%</p>
+        <input id="btnVolverEstadisticas" class="btnSextoEstilo" type="submit" value="Atras">
     </div>
 
 
@@ -215,6 +217,9 @@
         <br />
         <br />
         <input id = "btnIrManifiesto" class="btnSeptimoEstilo" type="submit" value="Manifiesto de carga">
+        <br />
+        <br />
+        <input id = "btnIrInicioEmpresa" class="btnQuintoEstilo" type="submit" value="Inicio">
     </div>
 
 
