--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         </div>
         <br>
         <br>
-        <h4 id="titleListaPeligrosa">Lista Peligrosa</h4>
+        <h4 id="titleListaPeligrosa">Manifiesto de su carga</h4>
         <br>
         <table id="containerTable">
 			<thead>
